updating the way predicitons method
Reworking how predictions are added to the predicions zarr array and how metrics are caculated.

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "30b3683e",
    "metadata": {},
    "outputs": [],
@@ -164,18 +164,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f2ce26ea",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Extracted GTF attributes: ['gene_id', 'gene_type', 'gene_name', 'level', 'tag', 'transcript_id', 'transcript_type', 'transcript_name', 'transcript_support_level', 'havana_transcript', 'exon_number', 'exon_id', 'hgnc_id', 'havana_gene', 'ont', 'protein_id', 'ccdsid', 'artif_dupl']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gtf_file = read_gtf(\"/data/common/genome/gencode.v44.basic.annotation.gtf\")\n",
     "gtf_file.write_parquet(\"../reference_files/gencode.v44.basic.annotation.gtf.parquet\")"
@@ -184,7 +176,281 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7090ea1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7d5c8654",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir(\"/zata/zippy/ramirezc/splice-model-benchmark\")\n",
+    "\n",
+    "import sys\n",
+    "splice_transformer_path = os.path.join(f\"{os.getcwd}\", 'reference_files', 'SpliceTransformer')\n",
+    "sys.path.append(splice_transformer_path)\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from pyfaidx import Fasta\n",
+    "import argparse\n",
+    "import vcf as pyvcf\n",
+    "from pyensembl import Genome\n",
+    "import tqdm\n",
+    "import os\n",
+    "from sptransformer import Annotator\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04c2ed31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annotator = Annotator()\n",
+    "gtf = annotator.gtf\n",
+    "\n",
+    "tis_names = ['Adipose Tissue', 'Blood', 'Blood Vessel', 'Brain', 'Colon', 'Heart', 'Kidney',\n",
+    "                'Liver', 'Lung', 'Muscle', 'Nerve', 'Small Intestine', 'Skin', 'Spleen', 'Stomach']\n",
+    "\n",
+    "input_seq = 'N'*4000 + 'ACGTAGGGCG' + 'N'*4000  # just an example\n",
+    "input_seq = annotator.model.one_hot_encode(input_seq)\n",
+    "input_seq = torch.tensor(input_seq).to(annotator.model.device)\n",
+    "print(input_seq.shape)\n",
+    "# the function step() accepts encoded sequence, (Batch, 4, Length),\n",
+    "# thus, the input_seq should have shape (1, 4, Length)\n",
+    "input_seq = input_seq.unsqueeze(0).float().transpose(1, 2)\n",
+    "output = annotator.model.step(input_seq)\n",
+    "print(output.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb46e4a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "save_path = 'model/weights/SpTransformer_pytorch.ckpt'\n",
+    "save_dict = torch.load(save_path, map_location='cpu')\n",
+    "\n",
+    "new_state_dict = {}\n",
+    "for key, value in save_dict[\"state_dict\"].items():\n",
+    "    if \"attn.pos_emb.weights_\" in key:\n",
+    "        new_key = key.replace(\"attn.pos_emb.weights_\", \"attn.pos_emb.weights.\")\n",
+    "        new_state_dict[new_key] = value\n",
+    "    else:\n",
+    "        new_state_dict[key] = value\n",
+    "\n",
+    "save_dict[\"state_dict\"] = new_state_dict\n",
+    "\n",
+    "new_save_path = 'model/weights/SpTransformer_pytorch_fixed.ckpt'\n",
+    "torch.save(save_dict, new_save_path)\n",
+    "\n",
+    "print(f\"Modified checkpoint saved to {new_save_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d0d7a34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from pangolin.model import *\n",
+    "import os\n",
+    "os.chdir(\"/zata/zippy/ramirezc/splice-model-benchmark\")\n",
+    "\n",
+    "model_path = \"reference_files/pangolin/models/final.{model_index}.{model_num}.3\"\n",
+    "\n",
+    "model_nums = [0, 2, 4, 6]\n",
+    "models = []\n",
+    "for i in model_nums:\n",
+    "    for j in range(1, 6):\n",
+    "        model = Pangolin(L, W, AR)\n",
+    "        model.cuda()\n",
+    "        weights = torch.load(model_path.format(model_index=j, model_num=i))\n",
+    "        model.load_state_dict(weights)\n",
+    "        model.eval()\n",
+    "        models.append(model)\n",
+    "                \n",
+    "print(models)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "dafea605",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import zarr\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "3078368e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "splice_site_predicitons = zarr.open_group(store=\"/zata/zippy/ramirezc/splice-model-benchmark/results/pangolin_predictions.zarr/splice_site_predictions\", mode=\"r\")\n",
+    "splice_site_truth = zarr.open_group(store=\"/zata/zippy/ramirezc/splice-model-benchmark/results/pangolin_predictions.zarr/splice_site_truth\", mode=\"r\")\n",
+    "splice_sites = zarr.open_group(store=\"/zata/zippy/ramirezc/splice-model-benchmark/results/pangolin_predictions.zarr/splice_sites\", mode=\"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "7b901af6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9036884307861328\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(splice_site_predicitons[\"chr1\"][11963635])\n",
+    "print(splice_site_truth[\"chr1\"][11963635])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "76fa56af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('chr1',  53945928, '-') ('chr1',  53939984, '-')\n",
+      " ('chr1',  53940096, '-') ('chr1',  53930038, '-')\n",
+      " ('chr1',  53930144, '-') ('chr1',  53928371, '-')\n",
+      " ('chr1',  53928439, '-') ('chr1',  53923903, '-')\n",
+      " ('chr1',  53923946, '-') ('chr1',  53921560, '-')\n",
+      " ('chr1',  11934854, '+') ('chr1',  11947975, '+')\n",
+      " ('chr1',  11948066, '+') ('chr1',  11949772, '+')\n",
+      " ('chr1',  11949905, '+') ('chr1',  11950356, '+')\n",
+      " ('chr1',  11950519, '+') ('chr1',  11952622, '+')\n",
+      " ('chr1',  11952734, '+') ('chr1',  11954829, '+')\n",
+      " ('chr1',  11954892, '+') ('chr1',  11956916, '+')\n",
+      " ('chr1',  11957013, '+') ('chr1',  11957841, '+')\n",
+      " ('chr1',  11957942, '+') ('chr1',  11958515, '+')\n",
+      " ('chr1',  11958646, '+') ('chr1',  11960645, '+')\n",
+      " ('chr1',  11960766, '+') ('chr1',  11963531, '+')\n",
+      " ('chr1',  11963635, '+') ('chr1',  11964174, '+')\n",
+      " ('chr1',  11964299, '+') ('chr1',  11964643, '+')\n",
+      " ('chr1',  11964784, '+') ('chr1',  11965479, '+')\n",
+      " ('chr1',  11965592, '+') ('chr1',  11966250, '+')\n",
+      " ('chr1',  11966315, '+') ('chr1',  11966986, '+')\n",
+      " ('chr1',  11967090, '+') ('chr1',  11970669, '+')\n",
+      " ('chr1',  11970815, '+') ('chr1',  11972871, '+')\n",
+      " ('chr1',  11972996, '+') ('chr1',  11974652, '+')\n",
+      " ('chr1',   8878685, '-') ('chr1',   8874823, '-')\n",
+      " ('chr1',   8874916, '-') ('chr1',   8871890, '-')\n",
+      " ('chr1',   8871985, '-') ('chr1',   8870451, '-')\n",
+      " ('chr1',   8870509, '-') ('chr1',   8867987, '-')\n",
+      " ('chr1',   8868056, '-') ('chr1',   8867116, '-')\n",
+      " ('chr1',   8867249, '-') ('chr1',   8866278, '-')\n",
+      " ('chr1',   8866500, '-') ('chr1',   8865284, '-')\n",
+      " ('chr1',   8865481, '-') ('chr1',   8863890, '-')\n",
+      " ('chr1',   8864091, '-') ('chr1',   8863234, '-')\n",
+      " ('chr1',   8863342, '-') ('chr1',   8862886, '-')\n",
+      " ('chr1',   8862944, '-') ('chr1',   8860999, '-')\n",
+      " ('chr1', 109214127, '+') ('chr1', 109223977, '+')\n",
+      " ('chr1', 109224047, '+') ('chr1', 109228351, '+')\n",
+      " ('chr1', 109228431, '+') ('chr1', 109229413, '+')\n",
+      " ('chr1', 109229571, '+') ('chr1', 109230877, '+')\n",
+      " ('chr1', 109231020, '+') ('chr1', 109231630, '+')\n",
+      " ('chr1', 109231785, '+') ('chr1', 109235209, '+')\n",
+      " ('chr1', 109235430, '+') ('chr1', 109235976, '+')\n",
+      " ('chr1', 109236105, '+') ('chr1', 109236390, '+')\n",
+      " ('chr1', 109236547, '+') ('chr1', 109237243, '+')\n",
+      " ('chr1', 109237372, '+') ('chr1', 109237730, '+')\n",
+      " ('chr1',  54053437, '-') ('chr1',  54047266, '-')\n",
+      " ('chr1',  54047371, '-') ('chr1',  54045691, '-')\n",
+      " ('chr1',  54045785, '-') ('chr1',  54043372, '-')\n",
+      " ('chr1',  54043524, '-') ('chr1',  54041723, '-')\n",
+      " ('chr1',  54041804, '-') ('chr1',  54040755, '-')\n",
+      " ('chr1',  54040836, '-') ('chr1',  54036609, '-')\n",
+      " ('chr1',  54036717, '-') ('chr1',  54026680, '-')\n",
+      " ('chr1',   6199611, '-') ('chr1',   6197651, '-')\n",
+      " ('chr1',   6197755, '-') ('chr1',   6192929, '-')\n",
+      " ('chr1',   6193053, '-') ('chr1',   6185019, '-')\n",
+      " ('chr1', 111449375, '-') ('chr1', 111448618, '-')\n",
+      " ('chr1', 111448803, '-') ('chr1', 111447434, '-')\n",
+      " ('chr1', 111447575, '-') ('chr1', 111447094, '-')\n",
+      " ('chr1', 111447143, '-') ('chr1', 111444053, '-')\n",
+      " ('chr1', 111444123, '-') ('chr1', 111443866, '-')\n",
+      " ('chr1', 111443920, '-') ('chr1', 111443322, '-')\n",
+      " ('chr1', 111443393, '-') ('chr1', 111442652, '-')\n",
+      " ('chr1', 111442760, '-') ('chr1', 111442024, '-')\n",
+      " ('chr1', 111442092, '-') ('chr1', 111439889, '-')\n",
+      " ('chr1',  12019551, '+') ('chr1',  12021644, '+')\n",
+      " ('chr1',  12021839, '+') ('chr1',  12022094, '+')\n",
+      " ('chr1',  12022441, '+') ('chr1',  12022832, '+')\n",
+      " ('chr1',  12022916, '+') ('chr1',  12029032, '+')\n",
+      " ('chr1',  12029140, '+') ('chr1',  12029222, '+')\n",
+      " ('chr1',  12029280, '+') ('chr1',  12029764, '+')\n",
+      " ('chr1',  12029893, '+') ('chr1',  12030027, '+')\n",
+      " ('chr1',  12030123, '+') ('chr1',  12031265, '+')\n",
+      " ('chr1',  12031402, '+') ('chr1',  12031721, '+')\n",
+      " ('chr1',  19312145, '-') ('chr1',  19308454, '-')\n",
+      " ('chr1',  19308641, '-') ('chr1',  19308157, '-')\n",
+      " ('chr1',  19308261, '-') ('chr1',  19307313, '-')\n",
+      " ('chr1',  19307409, '-') ('chr1',  19307001, '-')\n",
+      " ('chr1',  19307100, '-') ('chr1',  19306017, '-')\n",
+      " ('chr1',  19306146, '-') ('chr1',  19303964, '-')\n",
+      " ('chr1',  43172259, '-') ('chr1',  43171885, '-')\n",
+      " ('chr1',  43171968, '-') ('chr1',  43171478, '-')\n",
+      " ('chr1',  43171650, '-') ('chr1',  43170755, '-')\n",
+      " ('chr1',  43170878, '-') ('chr1',  43168938, '-')\n",
+      " ('chr1',  43169027, '-') ('chr1',  43167159, '-')\n",
+      " ('chr1',  43167234, '-') ('chr1',  43166825, '-')\n",
+      " ('chr1',  43166918, '-') ('chr1',  43164642, '-')\n",
+      " ('chr1',  43164804, '-') ('chr1',  43164183, '-')\n",
+      " ('chr1', 169711697, '-') ('chr1', 169710435, '-')\n",
+      " ('chr1', 169710516, '-') ('chr1', 169708416, '-')\n",
+      " ('chr1', 169708802, '-') ('chr1', 169707341, '-')\n",
+      " ('chr1', 169707448, '-') ('chr1', 169704567, '-')\n",
+      " ('chr1', 169704752, '-') ('chr1', 169703254, '-')\n",
+      " ('chr1', 169703439, '-') ('chr1', 169701559, '-')\n",
+      " ('chr1', 169701687, '-') ('chr1', 169696534, '-')\n",
+      " ('chr1', 169696552, '-') ('chr1', 169690666, '-')\n",
+      " ('chr1',  25232492, '-') ('chr1',  25232103, '-')\n",
+      " ('chr1',  25232210, '-') ('chr1',  25228997, '-')\n",
+      " ('chr1',  25229122, '-') ('chr1',  25228117, '-')\n",
+      " ('chr1',  25228234, '-') ('chr1',  25227441, '-')\n",
+      " ('chr1',  25227531, '-') ('chr1',  25225001, '-')\n",
+      " ('chr1',  25225099, '-') ('chr1',  25222678, '-')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(splice_sites['metadata'][:200])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c4a0ec0",
    "metadata": {},
    "outputs": [],
    "source": []
