--- a/notebooks/joining_the_dataframes.ipynb
+++ b/notebooks/joining_the_dataframes.ipynb
@@ -336,17 +336,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "b90a80dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import subprocess\n",
+    "# import subprocess\n",
     "\n",
-    "genome_sizes = subprocess.run([\"cut\", \"-f1,2\", \"GRCh38_no_alt_analysis_set_GCA_000001405.15.fasta.fai\"],\n",
-    "                                     capture_output=True, text=True)\n",
-    "with open('genome.sizes', 'w') as f:\n",
-    "    f.write(genome_sizes.stdout)"
+    "# genome_sizes = subprocess.run([\"cut\", \"-f1,2\", \"GRCh38_no_alt_analysis_set_GCA_000001405.15.fasta.fai\"],\n",
+    "#                                      capture_output=True, text=True)\n",
+    "# with open('genome.sizes', 'w') as f:\n",
+    "#     f.write(genome_sizes.stdout)"
    ]
   },
   {
